@@ -1,0 +1,2 @@
+File Name,bayesian approach,clustering,copulas,forecasting,frequentist approach,geographical scale,historical data analysis,historical period studied,regression models
+test,no,no,yes,yes,no,river basin,yes,1970-1999; 1997-2017,yes
