@@ -1,2 +1,0 @@
-// Tests for prompt generation
-package prompt
